--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Titulo -->
-    <title>Jane Doe | Desarrollo Web Front-End</title>
+    <title>Erika Fuentes Lozano | Desarrollo Web Front-End</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="imagenes/icono.png">
     <!-- Bootstrap -->
@@ -40,9 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#proyectos">Proyectos</a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="#testimonios">Testimonios</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#contacto">Contacto</a>
             </li>
@@ -54,8 +54,8 @@
     <!-- Seccion Hero -->
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/desarrollador-ejemplo.svg" alt="Foto de Jane Doe">
-        <h1>Hola, soy Jane Doe</h1>
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/desarrollador-ejemplo.svg" alt="Foto de Erika">
+        <h1>Hola, soy Erika Fuentes</h1>
         <!--<h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>-->
 
         <!--Animación con JavaScript-->
@@ -69,8 +69,9 @@
     <!-- Sobre mi -->
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">Conoce a Jane Doe</h2>
-        <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. Donec et venenatis nunc, vel hendrerit ex. Vestibulum sapien ipsum, rutrum eget est et, ultricies sagittis urna. In non volutpat est. Vestibulum diam sapien, ultrices et euismod at, ultrices ut odio. Nullam in massa et elit ultrices suscipit. Proin lacinia leo ac posuere placerat.</p>
+        <h2 class="seccion-titulo">Conoce a Erika Fuentes</h2>
+        <p class="seccion-texto">Soy Erika Fuentes Lozano, tengo 24 años y vivo en la CDMX, estudié Química Farmacéutica Biológica y actualmente escribo mi Tesis.
+          Me gustan los retos y aprender algo nuevo cada día. Soy muy organizada y entregada a lo que hago. Soy principiante en el desarrollo de sitios web, sin embargo he adquirido los conocimientos básicos para la creación de éstas. Sigo en el proceso de adquirir nuevas habilidades que me permitan mejorar en el desarrollo web y programación.</p>
       </div>
     </section>
 
@@ -82,7 +83,7 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Desarrollo Web</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Tengo conocimientos básicos de HTML, CSS y JavaScript, conocimientos que adquirí en el bootcamp de Tecnolochicas </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">HTML</span>
               <span class="badge text-bg-primary">CSS</span>
@@ -90,7 +91,7 @@
               <span class="badge text-bg-primary">React</span>
             </div>
           </div>
-          <!-- Articulos -->
+          <!-- Articulos 
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Artículos</p>
@@ -100,12 +101,12 @@
               <span class="badge text-bg-primary">Editar</span>
               <span class="badge text-bg-primary">Blogs</span>
             </div>
-          </div>
+          </div>--> 
           <!-- Estudiante -->
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Estudiante</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p> Soy pasante de la carrera de Química Farmacéutica Biológica, estudié en la Facultad de Química, UNAM. Actualmente me encuentro en el desarrollo de mi tesis en el estudio de productos naturales a partir de Hongos, al igual sigo estudiando lenguajes de programación, desarrollo web y análisis de datos.</p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">Tecnolochicas PRO</span>
               <span class="badge text-bg-primary">Desarrollo Web</span>
@@ -133,7 +134,7 @@
                   <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://erika-fl.github.io/Trastornos-Mentales/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -147,7 +148,7 @@
               <div class="overlay">
                 <p>Proyecto 2</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/Erika-FL/google-clone" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#/" target="_blank" rel="noopener noreferrer">
@@ -174,7 +175,7 @@
               </div>
             </div>
           </div>
-          <!-- Proyecto 4 -->
+          <!-- Proyecto 4 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto4.png" alt="Proyecto 1">
@@ -190,8 +191,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <!-- Proyecto 5 -->
+          </div>-->
+          <!-- Proyecto 5 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto5.png" alt="Proyecto 1">
@@ -207,8 +208,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <!-- Proyecto 6 -->
+          </div>-->
+          <!-- Proyecto 6 
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto6.png" alt="Proyecto 1">
@@ -224,7 +225,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
       <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
@@ -235,12 +236,12 @@
       </a>
     </section>
 
-    <!-- Testimonios -->
+    <!-- Testimonios 
     <section id="testimonios" class="testimonios seccion-clara">
       <h2 class="seccion-titulo">Testimonios</h2>
-      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes...</h3>
+      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes...</h3>-->
       
-      <!-- Carrusel -->
+      <!-- Carrusel 
       <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -283,7 +284,8 @@
           <span class="visually-hidden">Siguiente</span>
         </button>
       </div>
-    </section>
+    </section>-->
+    
 
     <!-- Contacto -->
     <section id="contacto" class="contacto seccion-oscura">
@@ -297,7 +299,7 @@
               Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
             </div>
             <div class="col-12 col-md-4">
-              <a href="mailto:janedoe@micorreo.com">
+              <a href="erika26fl@gmail.com">
                 <button type="button">  
                   Contacto
                   <i class="bi bi-envelope-check-fill"></i>
@@ -314,23 +316,23 @@
       <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
       <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <!--<a href="#" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-twitter"></i>
-        </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        </a>-->
+        <a href="https://github.com/Erika-FL" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/erika-fuentes-lozano-319632218/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <!--<a href="#" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
-        </a>
-        <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+        </a>-->
+        <a href="erika26fl@gmail.com" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por Jane Doe (2022) &#169;</div>
+      <div class="derechos-de-autor">Creado por Erika Fuentes (2023) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
