--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <a href="https://github.com/Erika-FL/google-clone" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://docs.google.com/presentation/d/1XTR6y2fqMG460Rik1t53RgBmhA1Sm4PSl3-G8Y2NWPc/edit#slide=id.p" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
